[gd_scene load_steps=10 format=3 uid="uid://dqwdrmf7pnjwg"]

[ext_resource type="Script" path="res://player.gd" id="1_dfq2s"]
[ext_resource type="Script" path="res://attack_button.gd" id="2_85lj6"]
[ext_resource type="Script" path="res://items_button.gd" id="3_ggpbo"]
[ext_resource type="Script" path="res://item_inventory.gd" id="4_aarr5"]
[ext_resource type="Script" path="res://shadows_button.gd" id="4_h7vof"]
[ext_resource type="Script" path="res://shadows_submenu.gd" id="5_uc0xf"]
[ext_resource type="Script" path="res://player_health_bar.gd" id="7_rd4oa"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ro64n"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cwv0t"]

[node name="Alchemia" type="Area2D"]
position = Vector2(500, 500)
monitorable = false
script = ExtResource("1_dfq2s")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.5, 0)
scale = Vector2(101, 150)
texture = SubResource("PlaceholderTexture2D_ro64n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(5, 5)
shape = SubResource("CapsuleShape2D_cwv0t")

[node name="Primary UI" type="VBoxContainer" parent="."]
offset_left = -45.0
offset_top = -217.0
offset_right = 52.0
offset_bottom = -109.0

[node name="Attack" type="Button" parent="Primary UI"]
layout_mode = 2
text = "Attack"
script = ExtResource("2_85lj6")

[node name="Transformation Submenu" type="VBoxContainer" parent="Primary UI/Attack"]
visible = false
layout_mode = 0
offset_left = 102.0
offset_top = -13.0
offset_right = 168.0
offset_bottom = 42.0

[node name="Plasma Blast" type="Button" parent="Primary UI/Attack/Transformation Submenu"]
visible = false
layout_mode = 2
text = "Plasma Blast"

[node name="Plasma Blast Description" type="TextEdit" parent="Primary UI/Attack/Transformation Submenu/Plasma Blast"]
visible = false
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Shoots a long range ball of plasma out of mouth dealing 30-40 damage."

[node name="Claw Strike" type="Button" parent="Primary UI/Attack/Transformation Submenu"]
visible = false
layout_mode = 2
text = "Claw Strike"

[node name="Claw Strike Description" type="TextEdit" parent="Primary UI/Attack/Transformation Submenu/Claw Strike"]
visible = false
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Leaps forward and obliterates anything in its way with razor sharp claws. Deals 30-40 dmg."

[node name="Mega Bottle" type="Button" parent="Primary UI/Attack/Transformation Submenu"]
visible = false
layout_mode = 2
text = "Mega Bottle"

[node name="Mega Bottle Description" type="TextEdit" parent="Primary UI/Attack/Transformation Submenu/Mega Bottle"]
visible = false
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Throws a massive concoction of potions which poisons anybody who gets hit and deals 25 dmg."

[node name="Cloak Slap" type="Button" parent="Primary UI/Attack/Transformation Submenu"]
visible = false
layout_mode = 2
text = "Cloak Slap"

[node name="Cloak Slap Description" type="TextEdit" parent="Primary UI/Attack/Transformation Submenu/Cloak Slap"]
visible = false
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Runs up to an enemy and slaps them with super heavy cloak dazing them and dealing 20 dmg."

[node name="Supersonic Roar" type="Button" parent="Primary UI/Attack/Transformation Submenu"]
visible = false
layout_mode = 2
text = "Psionic Roar"

[node name="Supersonic Roar Description" type="TextEdit" parent="Primary UI/Attack/Transformation Submenu/Supersonic Roar"]
visible = false
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Roars so inanely loudly that it blasts the eardrums of anybody who hears and dazes them. Deals 25 dmg."

[node name="Body Slam" type="Button" parent="Primary UI/Attack/Transformation Submenu"]
visible = false
layout_mode = 2
text = "Body Slam"

[node name="Body Slam Description" type="TextEdit" parent="Primary UI/Attack/Transformation Submenu/Body Slam"]
visible = false
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Jumps up into the air and slams down on enemy dealing 50 - 60 dmg but causes you to be dazed."

[node name="Items" type="Button" parent="Primary UI"]
layout_mode = 2
text = "Items"
script = ExtResource("3_ggpbo")

[node name="ItemList" type="ItemList" parent="Primary UI/Items"]
visible = false
layout_mode = 0
offset_left = 105.0
offset_top = 8.0
offset_right = 166.0
offset_bottom = 82.0
script = ExtResource("4_aarr5")

[node name="Alchemy" type="Button" parent="Primary UI"]
layout_mode = 2
toggle_mode = true
text = "Alchemy"
script = ExtResource("4_h7vof")

[node name="Alchemy Submenu" type="VBoxContainer" parent="Primary UI/Alchemy"]
visible = false
layout_mode = 0
offset_left = 100.0
offset_top = 1.0
offset_right = 180.0
offset_bottom = 102.0
script = ExtResource("5_uc0xf")

[node name="Partner" type="Button" parent="Primary UI/Alchemy/Alchemy Submenu"]
layout_mode = 2
text = "Partner"

[node name="Items" type="Button" parent="Primary UI/Alchemy/Alchemy Submenu"]
layout_mode = 2
text = "Items
"

[node name="Alchemia" type="Button" parent="Primary UI/Alchemy/Alchemy Submenu"]
layout_mode = 2
text = "Alchemia"

[node name="player_health_bar" type="ProgressBar" parent="."]
offset_left = -49.0
offset_top = 80.0
offset_right = 50.0
offset_bottom = 107.0
max_value = 200.0
show_percentage = false
script = ExtResource("7_rd4oa")

[connection signal="partner_turn" from="." to="Primary UI" method="_on_alchemia_partner_turn"]
[connection signal="transformation_submenu_active" from="." to="Primary UI/Attack/Transformation Submenu" method="_on_alchemia_transformation_submenu_active"]
[connection signal="transformation_submenu_active" from="." to="Primary UI/Items" method="_on_alchemia_transformation_submenu_active"]
[connection signal="transformation_submenu_active" from="." to="Primary UI/Alchemy" method="_on_alchemia_transformation_submenu_active"]
[connection signal="ui_appear" from="." to="Primary UI" method="_on_alchemia_ui_appear"]
[connection signal="pressed" from="Primary UI/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="Primary UI/Attack/Transformation Submenu/Plasma Blast" to="." method="_on_plasma_blast_pressed"]
[connection signal="pressed" from="Primary UI/Attack/Transformation Submenu/Claw Strike" to="." method="_on_claw_strike_pressed"]
[connection signal="pressed" from="Primary UI/Items" to="Primary UI/Attack" method="_on_items_pressed"]
[connection signal="pressed" from="Primary UI/Items" to="Primary UI/Alchemy" method="_on_items_pressed"]
[connection signal="item_activated" from="Primary UI/Items/ItemList" to="Primary UI/Items/ItemList" method="_on_item_activated"]
[connection signal="pressed" from="Primary UI/Alchemy" to="Primary UI/Attack" method="_on_shadows_pressed"]
[connection signal="pressed" from="Primary UI/Alchemy" to="Primary UI/Items" method="_on_shadows_pressed"]
[connection signal="pressed" from="Primary UI/Alchemy" to="Primary UI/Alchemy/Alchemy Submenu" method="_on_shadows_pressed"]
[connection signal="pressed" from="Primary UI/Alchemy/Alchemy Submenu/Partner" to="." method="_on_partner_pressed"]
[connection signal="pressed" from="Primary UI/Alchemy/Alchemy Submenu/Items" to="." method="_on_items_pressed"]
[connection signal="pressed" from="Primary UI/Alchemy/Alchemy Submenu/Alchemia" to="." method="_on_alchemia_pressed"]
